--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="preload"
+      href="src/assets/fonts/Poppins-Regular.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="src/assets/fonts/Poppins-Medium.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="src/assets/fonts/Alata-Regular.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
     <title>Event Planner</title>
   </head>
   <body>
