--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="preload"
+      href="src/assets/fonts/Poppins-Light.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
       href="src/assets/fonts/Poppins-Regular.ttf"
       as="font"
       crossorigin="anonymous"
