--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       as="font"
       crossorigin="anonymous"
     />
-    <link
+    <!-- <link
       rel="preload"
       href="src/assets/images/svg/mainBackground.svg"
       as="image"
       type="image/svg+xml"
       crossorigin="anonymous"
-    />
+    /> -->
     <title>Event Planner</title>
   </head>
   <body>
