--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     />
     <link
       rel="preload"
+      href="src/assets/fonts/Poppins-SemiBold.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
       href="src/assets/fonts/Alata-Regular.ttf"
       as="font"
       crossorigin="anonymous"
@@ -39,6 +45,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
