--- a/index.html
+++ b/index.html
@@ -6,37 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="preload"
-      href="src/assets/fonts/Poppins-Light.ttf"
+      href="/src/assets/fonts/Poppins-Light.ttf"
       as="font"
       crossorigin="anonymous"
     />
     <link
       rel="preload"
-      href="src/assets/fonts/Poppins-Regular.ttf"
+      href="/src/assets/fonts/Poppins-Regular.ttf"
       as="font"
       crossorigin="anonymous"
     />
     <link
       rel="preload"
-      href="src/assets/fonts/Poppins-Medium.ttf"
+      href="/src/assets/fonts/Poppins-Medium.ttf"
       as="font"
       crossorigin="anonymous"
     />
     <link
       rel="preload"
-      href="src/assets/fonts/Poppins-SemiBold.ttf"
+      href="/src/assets/fonts/Poppins-SemiBold.ttf"
       as="font"
       crossorigin="anonymous"
     />
     <link
       rel="preload"
-      href="src/assets/fonts/Alata-Regular.ttf"
+      href="/src/assets/fonts/Alata-Regular.ttf"
       as="font"
       crossorigin="anonymous"
     />
     <link
       rel="preload"
-      href="src/assets/images/svg/mainBackground.svg"
+      href="/src/assets/images/svg/mainBackground.svg"
       as="image"
       type="image/svg+xml"
       crossorigin="anonymous"
@@ -45,6 +45,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
