--- a/index.html
+++ b/index.html
@@ -4,43 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="preload"
-      href="/src/assets/fonts/Poppins-Light.ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/src/assets/fonts/Poppins-Regular.ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/src/assets/fonts/Poppins-Medium.ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/src/assets/fonts/Poppins-SemiBold.ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/src/assets/fonts/Alata-Regular.ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
+    <!-- <link
       rel="preload"
       href="/src/assets/images/svg/mainBackground.svg"
       as="image"
       type="image/svg+xml"
       crossorigin="anonymous"
-    />
+    /> -->
     <title>Event Planner</title>
   </head>
   <body>
